# Ultra-Light-Fast-Generic-Face-Detector-1MB

./: .gitignore
TensorRT/: CMakeLists.txt
TensorRT/src/: UltraFace.cpp  main.cpp
ncnn/: CMakeLists.txt
ncnn/src/: UltraFace.cpp  main.cpp  main_camera.cpp
